--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,7 +24,7 @@
     <div class="price-component__column price">
       <h2 class="price-component__title">Monthly Subscription</h2>
 
-      <p class="price__cost">&dollar;29<span  class="price__cost--period"> per month</span></p>
+      <p class="price__cost">&dollar;29<span  class="price__cost-period"> per month</span></p>
 
       <p class="price__text">Full access for less than &dollar;1 a day</p>
 
